--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/layouts/partials/site_footer.html
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/layouts/partials/site_footer.html
@@ -1,15 +1,4 @@
 <footer class="site-footer">
-
-  {{ if .IsTranslated | and site.Params.footer.show_translations }}
-    <div class="powered-by d-flex flex-wrap pb-2 justify-content-center">
-      <div class="p-2 font-weight-bold"><i class="fas fa-globe pr-1" aria-hidden="true"></i>{{ i18n "languages" }}:</div>
-      <div class="p-2">{{ index site.Data.i18n.languages .Lang }}</div>
-      {{ range .Translations }}
-        <div class="p-2"><a href="{{ .Permalink }}">{{ index site.Data.i18n.languages .Lang }}</a></div>
-      {{ end }}
-    </div>
-  {{ end }}
-
   {{ if or (site.GetPage "terms.md") (site.GetPage "privacy.md") }}
   <p class="powered-by">
     {{ with site.GetPage "privacy.md" }}
@@ -22,29 +11,29 @@
   </p>
   {{ end }}
 
-  {{ with site.Copyright }}
   <p class="powered-by">
-    {{ replace . "{year}" now.Year | markdownify }}
+    {{ with site.Copyright }}{{ replace . "{year}" now.Year | markdownify}}{{ end }}
   </p>
-  {{ end }}
 
   {{/* Display copyright license. */}}
   {{ partial "site_footer_license" . }}
 
   <p class="powered-by">
-    {{ $is_sponsor := site.Params.i_am_a_sponsor | default false }}
-    {{ $hide_published_with_footer := site.Params.power_ups.hide_published_with | default true }}
-    {{ if not (and $is_sponsor $hide_published_with_footer) }}
-      {{ $default := "Published with {wowchemy} — the free, {repo_link}open source{/repo_link} website builder that empowers creators." }}
-      {{ $i18n_published_with := i18n "published_with" | default $default }}
-      {{ if not (findRE "{wowchemy}" $i18n_published_with) }}
-        {{ warnf "Please attribute Wowchemy using `{wowchemy}` in the `published_with` text." }}
-        {{ $i18n_published_with = $default }}
-      {{ end }}
-      {{ $i18n_published_with = replace $i18n_published_with "{wowchemy}" "<a href=\"https://wowchemy.com/?utm_campaign=poweredby\" target=\"_blank\" rel=\"noopener\">Wowchemy</a>" | safeHTML }}
-      {{ $i18n_published_with = replace $i18n_published_with "{repo_link}" "<a href=\"https://github.com/wowchemy/wowchemy-hugo-modules\" target=\"_blank\" rel=\"noopener\">" | safeHTML }}
-      {{ $i18n_published_with = replace $i18n_published_with "{/repo_link}" "</a>" | safeHTML }}
-      {{ $i18n_published_with | markdownify | emojify }}
+
+    This site was made with <a href="https://cran.r-project.org/" target="_blank" rel="noopener"><i class="fab fa-r-project"  style="color: #FF69B4"></i></a>, the<a href="https://github.com/rstudio/blogdown" target="_blank" rel="noopener"> Blogdown</a> package and the
+    <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
+    <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>. Site deployed on <a href="https://www.netlify.com/" target="_blank" rel="noopener">Netlify </a> with a little help from <a href="https://github.com/gmednick" target="_blank" rel="noopener"><i class="fab fa-github"  style="color: #FF69B4"></i></a>. Thank you Alison Hill <i class="fas fa-praying-hands" style="color: #FF69B4"></i> and others for sharing tutorials on how to get blogging with <i class="fab fa-r-project"  style="color: #FF69B4"></i>!
+
+
+    {{ if ne .Type "docs" }}
+    <span class="float-right" aria-hidden="true">
+      <a href="#" id="back_to_top">
+        <span class="button_icon">
+          <i class="fas fa-chevron-up fa-2x"></i>
+        </span>
+      </a>
+    </span>
     {{ end }}
+
   </p>
 </footer>
